# ask-harry

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md
src/ask_harry/ai/: embeddings.py  llm_client.py
src/ask_harry/cli/: cli.py
src/ask_harry/config/: settings.py
src/ask_harry/prompts/: agent_system.txt  loader.py  prompts.py
src/ask_harry/retrieval/: chunker.py  vector_store.py
src/ask_harry/services/: ingest_service.py  rag_service.py
src/ask_harry/tools/: __init__.py  base.py  executor.py  grep_tool.py  list_files_tool.py  read_file_tool.py  registry.py  vector_search_tool.py
src/ask_harry/utils/: file_loader.py  utils.py
tests/: test_agent_service.py  test_chunker.py  test_loader_and_file_utils.py  test_rag_service.py  test_tools.py
